# Tube

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  outer-wall.stp  三通管.stp  弯管对称模拟数模.igs  弯管数模.igs  管.IGS
Profile/: rigidbody.info
